feat(study): Add XP gain animation and update stats
Introduce a new animation for XP gain and adjust the `updateStatsOnCompletion` function in `dataService.ts` to properly calculate and apply XP changes. This enhances the gamification aspect by visually representing learning progress.

The `updateStatsOnCompletion` function now accepts an `xpChange` parameter, allowing for more granular control over XP updates. The frontend has been updated to trigger an XP animation when XP changes.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
         80% { transform: scale(0.95); }
         100% { transform: scale(1); opacity: 1; }
       }
+
+      @keyframes xp-float {
+        0% { transform: translateY(0) scale(1); opacity: 1; }
+        100% { transform: translateY(-30px) scale(1.2); opacity: 0; }
+      }
+      .xp-change-animation {
+        animation: xp-float 1s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
